--- a/CSharpSolution/CodeStandard/CodeStandard.csproj
+++ b/CSharpSolution/CodeStandard/CodeStandard.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=2019.1.3.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.2019.1.3\lib\net20\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +51,7 @@
     <Compile Include="FormattingStyle\BracesLayout.cs" />
     <Compile Include="FormattingStyle\Indents.cs" />
     <Compile Include="FormattingStyle\LineBreakAndWrapping.cs" />
+    <Compile Include="FormattingStyle\Spaces.cs" />
     <Compile Include="FormattingStyle\Tab.cs" />
     <Compile Include="NamingStyle.cs" />
     <Compile Include="Program.cs" />
@@ -55,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
