FileLayout - Fields: Sort by ReadOnly then by Name => Sort by ReadOnly then by Access then by Name

--- a/CSharpSolution/CodeStandard/CodeStandard.csproj
+++ b/CSharpSolution/CodeStandard/CodeStandard.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="CodeInspection\ParameterHidesMember.cs" />
     <Compile Include="CodeStyle.cs" />
+    <Compile Include="FileLayout.cs" />
     <Compile Include="FormattingStyle\Alignment.cs" />
     <Compile Include="FormattingStyle\BlankLines.cs" />
     <Compile Include="FormattingStyle\BracesLayout.cs" />
